--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Yu-Sung Su <suyusung@tsinghua.edu.cn>,
 Maintainer: Yu-Sung Su <suyusung@tsinghua.edu.cn>
 BugReports: https://github.com/suyusung/R2jags/issues/
 Depends: R (>= 2.14.0), rjags (>= 3-3)
-Imports: abind, coda (>= 0.13), graphics, grDevices, methods, R2WinBUGS, parallel, stats, utils
+Imports: abind, coda (>= 0.13), graphics, grDevices, methods, R2WinBUGS, parallel, stats, utils, doParallel, foreach
 SystemRequirements: JAGS (http://mcmc-jags.sourceforge.net)
 Description: Providing wrapper functions to implement Bayesian analysis in JAGS.  Some major features include monitoring convergence of a MCMC model using Rubin and Gelman Rhat statistics, automatically running a MCMC model till it converges, and implementing parallel processing of a MCMC model for multiple chains.
 License: GPL (> 2) 
