--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,11 @@ importFrom(coda, "as.mcmc", "mcmc", "nvar", "varnames", "nchain", "as.mcmc.list"
 
 import(parallel)
 
+importFrom(doParallel, "registerDoParallel",
+           "stopImplicitCluster")
+
+importFrom(foreach, "foreach", "%dopar%")
+
 importFrom(R2WinBUGS, "attach.bugs",
                       "detach.bugs",
                       "write.model",
